.Update Member Index page Overflow Fix

--- a/ClientApp/src/Pages/Members/MembersIndexPage.css
+++ b/ClientApp/src/Pages/Members/MembersIndexPage.css
@@ -24,5 +24,4 @@ max-height: 150px;
     max-width: 400px;
     text-align: left;
     padding: 1% 1% 1% 1%;
-    margin-left: 20%;
 }
